--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-.container {
+ .container {
     display: flex;
     width: 1000px;
     height: 600px;
@@ -12,15 +12,11 @@
     border: 1px solid wheat;
     margin:auto;
     justify-content: start;
+    align-items: center;
     flex-wrap:wrap;
     margin-top: 10%;
-    
-    
-
-}
-
-
-
+    box-shadow: 10px 10px 10px  bisque;
+} 
 .container1 {
     background-image: url(./side.png);
     height: 600px;
@@ -29,7 +25,8 @@
     align-content:center;
     font-size:75px;
     font-weight: bolder;
-    color:aliceblue;
+    color:aliceblue;    
+    
     
 }
 
@@ -39,8 +36,8 @@
 }
 
 .massage {
-    margin-top: 7%;
-    margin-left: 7%;
+    margin-top: 4%;
+    margin-left: 5%;
     font-size: 20px;
 }
 .massage > p {
@@ -54,12 +51,14 @@
 
 .input > label {
     font-size: 20px;
+    margin-bottom: 40px;
 }
 
 #UserName-password {
     width: 380px;
     height: 40px;
-    border-radius: 15px;
+    border-radius: 10px;
+    margin-top: 3%;
 }
 
 .checkBox {
@@ -79,7 +78,7 @@
     margin-top: 7%;
     width: 385px;
     height: 45px;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color:rgb(71, 49, 214);
     color:aliceblue;
     font-size: 30px;
